--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "body-parser": "~1.8.1",
     "bootstrap": "^3.2.0",
     "cookie-parser": "~1.3.3",
+    "crypto": "0.0.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
+    "hue-hacking-node": "0.0.9",
     "morgan": "~1.3.0",
+    "node-twitter-api": "^1.5.0",
     "serve-favicon": "~2.1.3",
     "shelljs": "^0.3.0",
-    "swig": "^1.4.2",
-    "crypto": "0.0.3",
-    "node-twitter-api": "^1.5.0"
+    "swig": "^1.4.2"
   }
 }
